@@ -56,19 +56,36 @@
 				<img src="../../Images/common/address.png" alt="Our address">
 				<div class="image-wrapper">
 					<img class="ui fluid image" src="../../Images/common/info2.png">
-					<div id="image-wrapper-home-news-text">
+					<div id="image-wrapper-home-news-text" style="color:#7a1212;">
 						<br>
 						<br>
-						<h3 style="color:#7a1212;font-size:30px;">Men's Shed - info</h3>
+						<h3 style="font-size:30px;padding:10px;font-size:2vw">Aims of The &#8217;Shed&#8217;:</h3>
+							<p style ="padding:10px">
+								 - To increase social 
+								interaction between men.
+								<br/>
+								 - To improve links to other
+								services for local men. 
+								<br/>
+								 - To improve the mental
+								wellbeing of local men.
+								<br/><br/>
+								The Men&#8217;s Shed is managed
+								by a facilitator who is able to
+								identify potential mental health 
+								needs,and offer advice and 
+								sign-posting to appropriate
+								support services.
+							</p>
 					</div>
 				</div>
 				<br>
 				<div class="image-wrapper">
-					<img class="ui fluid image" src="../../Images/common/news-background.png">
+					<img class="ui fluid image" src="../../Images/common/news-background2.png">
 					<div id="image-wrapper-home-news-text">
-						<h3 style="font-size:40px;">NEWS</h3>
                             <pre>
-							<div id="news-text"></div>
+							<div id="news-text" style="padding:10px;font-size:1vw;color:#803f00;
+							font-family: Lucida Sans Typewriter,Lucida Console,monaco,Bitstream Vera Sans Mono,monospace"></div>
                             </pre>
 					</div>
 				</div>
@@ -88,21 +105,25 @@
 					<!--If we want to put text into files for them to be able to change later, leave this blank and read file with php/javascript then just change innerhtml-->
 					<div id="image-wrapper-home-main-text">
 						<p>
-							RT Projects is a small, passionate charity.
-						<br>
-							We believe that creativity is fundamental to a fulfilled life.
-						<br>
-							We use creative activities to achieve our aims. We develop and
-							deliver projects that focus on mental wellbeing.
-						<br>
-							We enable people to find and nurture dormant creative interests and hidden talents within themselves.
-						<br>
-						<br>
-							We often here stories of amazing people overcoming exceptional barriers.
-							These people all have one thing in common: "emotional resilience". We believe this can be learned.
-						<br>
-							Our goal is to help people to develop coping strategies and embark upon
-							a personal journey towards emotional resilience.
+							RTProjects &#8217;Men&#8217;s Shed&#8217; is now in its fifth year.
+							<br/>
+							The Shed is for men in Durham who may be 
+							physically, socially or emotionally isolated. 
+							<br/><br/>
+							The Men&#8217;s Shed is open to men from all walks of life.
+							 It is a place where men can meet, share ideas and 
+							follow their creative interests. 
+							It is not just a physical place, it is also -
+							 and perhaps more importantly - a community. 
+							  It is a safe and relaxed environment where men can
+							 have cup of tea and chat with other men in a spirit of
+							 friendship and respect. 
+							 <br/><br/>
+							 "There is always something going on in the shed,
+							 with good banter and plenty of tea and biscuits."
+							 <span style="float:right">Brian.</span>
+							 <br/><br/>
+
 						</p>
 						<div class="image-wrapper">
 							<img class="ui fluid image" id="main-sub-image" src="../../Images/mensShed/mensShed_1.jpg">
