@@ -1,1 +1,6 @@
-Men's Shed Test 01
+Activities are designed in response to the interests of the group members. 
+
+These include workshops and demonstrations by professional tutors and craftspeople including:
+Woodcarving, Printing, Stained Glass, Sculpture, Photography and more.
+
+The men also go on trips to places of interest
